public/style.css
/* ... */
.dragover.no_animation {
    animation: none;
}

.tokenItemizingSubclass {
    font-size: calc(var(--mainFontSize) * 0.8);
    color: var(--SmartThemeEmColor);
}

.tokenItemizingMaintext {
    font-size: calc(var(--mainFontSize) * 0.8);
}

.tokenGraph {
    border-radius: 10px;
    border: 1px solid var(--SmartThemeBorderColor);
    max-height: 100%;
    overflow: hidden;
}

.fa-solid::before,
.fa-regular::before {
    vertical-align: middle;
    text-align: center;
}

.fa-lock.right_menu_button,
.fa-unlock.right_menu_button {
    padding: 2px 4px;
}

.text_muted {
    font-size: calc(var(--mainFontSize) - 0.2em);
    color: var(--SmartThemeBodyColor);
    opacity: 0.7;
}

.mes[is_system="true"][ch_name="SillyTavern System"] .mes_text br {
    display: none;
}

.mes[is_system="true"] .avatar {
    opacity: 0.9;
    filter: grayscale(25%);
}

.mes_text table,
.mes_reasoning table {
    border-spacing: 0;
    border-collapse: collapse;
    margin-bottom: 10px;
}

.mes_text td,
.mes_text th,
.mes_reasoning td,
.mes_reasoning th {
    border: 1px solid;
    border-collapse: collapse;
    padding: 0.25em;
}

.mes_text p,
.mes_reasoning p {
    margin-top: 0;
    margin-bottom: 10px;
}

.mes_text p:last-child,
.mes_reasoning p:last-child {
    margin-bottom: 0;
}

.mes_text li tt,
.mes_reasoning li tt {
    display: inline-block;
}

.mes_text ol,
.mes_text ul,
.mes_reasoning ol,
.mes_reasoning ul {
    margin-top: 5px;
    margin-bottom: 5px;
}

.mes_text br,
.mes_bias br,
.mes_reasoning br {
    content: ' ';
}

.mes_bias {
    display: block;
    font-size: calc(var(--mainFontSize) - 0.1rem);
    font-weight: 500;
    color: var(--SmartThemeQuoteColor);
}

.mes_reasoning {
    display: block;
    border-left: 2px solid var(--reasoning-body-color);
    border-radius: 2px;
    padding: 5px 5px 5px 14px;
    margin-bottom: 0.5em;
    overflow-y: auto;
    color: hsl(from var(--reasoning-body-color) h calc(s * var(--reasoning-saturation)) l);
}

.mes_reasoning_details {
    margin-right: var(--mes-right-spacing);
}

.mes_reasoning_details .mes_reasoning_summary {
    list-style: none;
    margin-right: calc(var(--mes-right-spacing) * -1);
}

.mes_reasoning_details summary::-webkit-details-marker {
    display: none;
}

.mes_reasoning *:last-child {
    margin-bottom: 0;
}

.mes_reasoning_header_block {
    flex-grow: 1;
}

.mes_reasoning_header {
    cursor: pointer;
    position: relative;
    user-select: none;
    margin: 0.5em 2px;
    padding: 7px 14px;
    padding-right: calc(0.7em + 14px);
    border-radius: 5px;
    background-color: var(--grey30);
    font-size: calc(var(--mainFontSize) * 0.9);
    align-items: baseline;
}

.mes:has(.mes_reasoning:empty) .mes_reasoning_header {
    cursor: default;
}

/* TWIMC: Remove with custom CSS to show the icon */
.mes_reasoning_header>.icon-svg {
    display: none;
}

@supports not selector(:has(*)) {
    .mes_reasoning_details {
        display: none !important;
    }
}

.mes_bias:empty,
.mes:not(.reasoning) .mes_reasoning_details,
.mes_reasoning_details:not([open]) .mes_reasoning_actions,
.mes_reasoning_details:has(.reasoning_edit_textarea) .mes_reasoning,
.mes_reasoning_details:has(.reasoning_edit_textarea) .mes_reasoning_header,
.mes_reasoning_details:has(.reasoning_edit_textarea) .mes_reasoning_actions .mes_button:not(.edit_button),
.mes_reasoning_details:not(:has(.reasoning_edit_textarea)) .mes_reasoning_actions .edit_button,
.mes_block:has(.edit_textarea):has(.reasoning_edit_textarea) .mes_reasoning_actions,
.mes.reasoning:not([data-reasoning-state="hidden"]) .mes_edit_add_reasoning,
.mes:has(.mes_reasoning:empty) .mes_reasoning_arrow,
.mes:has(.mes_reasoning:empty) .mes_reasoning,
.mes:has(.mes_reasoning:empty) .mes_reasoning_copy {
    display: none;
}

.mes[data-reasoning-state="hidden"] .mes_edit_add_reasoning {
    background-color: color-mix(in srgb, var(--SmartThemeQuoteColor) 33%, var(--SmartThemeBlurTintColor) 66%);
}

/** If hidden reasoning should not be shown, we hide all blocks that don't have content */
#chat:not([data-show-hidden-reasoning="true"]):not(:has(.reasoning_edit_textarea)) .mes:has(.mes_reasoning:empty) .mes_reasoning_details {
    display: none;
}

#chat[data-show-thoughts-ui="false"]:not(:has(.reasoning_edit_textarea)) .mes_reasoning_details {
    display: none;
}

.mes_reasoning_details .mes_reasoning_arrow {
    position: absolute;
    top: 50%;
    right: 7px;
    transform: translateY(-50%);
    font-size: calc(var(--mainFontSize) * 0.7);
    width: calc(var(--mainFontSize) * 0.7);
    height: calc(var(--mainFontSize) * 0.7);
}

.mes_reasoning_details:not([open]) .mes_reasoning_arrow {
    transform: translateY(-50%) rotate(180deg);
}

.mes_reasoning_summary>span {
    margin-left: 0.5em;
}

.mes_text i,
.mes_text em {
    color: var(--SmartThemeEmColor);
}

.mes_reasoning i,
.mes_reasoning em {
    color: hsl(from var(--reasoning-em-color) h calc(s * var(--reasoning-saturation)) l);
}

.mes_text q i,
.mes_text q em {
    color: inherit;
}

.mes_reasoning q i,
.mes_reasoning q em {
    color: hsl(from var(--SmartThemeQuoteColor) h calc(s * var(--reasoning-saturation)) l);
}

.mes_text u {
    color: var(--SmartThemeUnderlineColor);
}

.mes_reasoning u {
    color: hsl(from var(--SmartThemeUnderlineColor) h calc(s * var(--reasoning-saturation)) l);
}

.mes_text q {
    color: var(--SmartThemeQuoteColor);
}

.mes_reasoning q {
    color: hsl(from var(--SmartThemeQuoteColor) h calc(s * var(--reasoning-saturation)) l);
}

.mes_text font[color] em,
.mes_text font[color] i,
.mes_text font[color] u,
.mes_text font[color] q,
.mes_reasoning font[color] em,
.mes_reasoning font[color] i,
.mes_reasoning font[color] u,
.mes_reasoning font[color] q {
    color: inherit;
}

.mes_text rp {
    display: block;
}

.mes_text blockquote,
.mes_reasoning blockquote {
    border-left: 3px solid var(--SmartThemeQuoteColor);
    padding-left: 10px;
    background-color: var(--black30a);
    margin: 0;
}
/* ... */

